<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:fillViewport="true"
	android:scrollbars="none"
	tools:context=".ui.request.RequestFragment">

	<androidx.constraintlayout.widget.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_margin="@dimen/screen_margin">

		<TextView
			android:id="@+id/request_map_label"
			style="@style/label"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/request_map_label"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent" />

		<ivandesimone.trustapp.ui.details.TouchMapFrameLayout
			android:id="@+id/request_map_container"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/default_margin"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@id/request_map_label">

			<androidx.fragment.app.FragmentContainerView
				android:id="@+id/request_map_fragment"
				android:name="com.google.android.gms.maps.SupportMapFragment"
				android:layout_width="match_parent"
				android:layout_height="@dimen/map_height" />
		</ivandesimone.trustapp.ui.details.TouchMapFrameLayout>

		<TextView
			android:id="@+id/lat_label"
			style="@style/label"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/medium_margin"
			android:text="@string/latitude"
			app:layout_constraintStart_toStartOf="@id/lat_edittext"
			app:layout_constraintTop_toBottomOf="@id/request_map_container" />

		<EditText
			android:id="@+id/lat_edittext"
			style="@style/form_field"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginEnd="@dimen/small_margin"
			android:hint="@string/lat_placeholder"
			android:inputType="text"
			app:layout_constraintEnd_toStartOf="@id/long_edittext"
			app:layout_constraintHorizontal_chainStyle="spread"
			app:layout_constraintHorizontal_weight="1"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@id/lat_label" />

		<TextView
			android:id="@+id/long_label"
			style="@style/label"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/medium_margin"
			android:text="@string/longitude"
			app:layout_constraintStart_toStartOf="@id/long_edittext"
			app:layout_constraintTop_toBottomOf="@id/request_map_container" />

		<EditText
			android:id="@+id/long_edittext"
			style="@style/form_field"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginStart="@dimen/small_margin"
			android:hint="@string/long_placeholder"
			android:inputType="text"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintHorizontal_chainStyle="spread"
			app:layout_constraintHorizontal_weight="1"
			app:layout_constraintStart_toEndOf="@id/lat_edittext"
			app:layout_constraintTop_toBottomOf="@id/long_label" />

		<TextView
			android:id="@+id/location_label"
			style="@style/label"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/medium_margin"
			android:text="@string/location"
			app:layout_constraintStart_toStartOf="@id/location_edittext"
			app:layout_constraintTop_toBottomOf="@id/lat_edittext" />

		<EditText
			android:id="@+id/location_edittext"
			style="@style/form_field"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/location_placeholder"
			android:inputType="text"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@id/location_label" />

		<TextView
			android:id="@+id/radius_label"
			style="@style/label"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/medium_margin"
			android:text="@string/radius"
			app:layout_constraintStart_toStartOf="@id/radius_edittext"
			app:layout_constraintTop_toBottomOf="@id/location_edittext" />

		<EditText
			android:id="@+id/radius_edittext"
			style="@style/form_field"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/radius_placeholder"
			android:inputType="number"
			android:text="@string/radius_placeholder"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@id/radius_label" />

		<TextView
			android:id="@+id/count_label"
			style="@style/label"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/medium_margin"
			android:text="@string/n_measurement"
			app:layout_constraintStart_toStartOf="@id/count_edittext"
			app:layout_constraintTop_toBottomOf="@id/radius_edittext" />

		<EditText
			android:id="@+id/count_edittext"
			style="@style/form_field"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/count_placeholder"
			android:inputType="number"
			android:text="@string/count_placeholder"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@id/count_label" />

		<Button
			android:id="@+id/request_zonia_button"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/medium_margin"
			android:text="@string/request_zonia"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@id/count_edittext" />

		<Button
			android:id="@+id/request_mock_button"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/request_mock"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@id/request_zonia_button" />

		<TextView
			android:id="@+id/request_log"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="@dimen/extra_big_margin"
			android:textColor="@color/dark_gray"
			android:textSize="@dimen/log"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@id/request_mock_button" />

	</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>