<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:orientation="horizontal"
	android:padding="@dimen/default_padding">

	<TextView
		android:id="@+id/row_date"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_weight="2"
		android:text="@string/date_placeholder" />

	<TextView
		android:id="@+id/row_location"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_weight="4"
		android:text="@string/location_placeholder" />

	<TextView
		android:id="@+id/row_humidity"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_weight="2"
		android:gravity="center"
		android:text="@string/humidity_placeholder" />

</LinearLayout>