<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:layout_marginHorizontal="@dimen/small_margin"
	android:layout_marginBottom="@dimen/list_card_bottom_margin"
	android:clickable="true"
	android:foreground="?attr/selectableItemBackground">

	<androidx.constraintlayout.widget.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_margin="@dimen/default_margin">

		<ImageView
			android:id="@+id/complete_row_icon"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:contentDescription="@string/water_drop"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			app:srcCompat="@drawable/ic_water_drop" />

		<TextView
			android:id="@+id/complete_row_location"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="@dimen/default_margin"
			android:text="@string/location_placeholder"
			android:textSize="@dimen/complete_row_title"
			app:layout_constraintStart_toEndOf="@id/complete_row_icon"
			app:layout_constraintTop_toTopOf="parent" />

		<TextView
			android:id="@+id/complete_row_timestamp"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/timestamp_placeholder"
			android:textSize="@dimen/complete_row_timestamp"
			app:layout_constraintStart_toStartOf="@id/complete_row_location"
			app:layout_constraintTop_toBottomOf="@id/complete_row_location" />

		<TextView
			android:id="@+id/complete_row_humidity"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginEnd="@dimen/default_margin"
			android:text="@string/humidity_placeholder"
			android:textSize="@dimen/complete_row_humidity"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toTopOf="parent" />

	</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>